--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+      <xml version="1.0" encoding="UTF-8" standalone="no">
       <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
       <svg
@@ -341,6 +341,6 @@
       <input id="input" />
       <button type="button">submit</button>
     </form>
-    <script src="main.js"></script>
+    <script src="main.ts" type="module"></script>
   </body>
 </html>
