Revert "fix: relative path"
This reverts commit 1e92f743fd01a7af42475f8590d1fcd627173d7c.

--- a/src/index.html
+++ b/src/index.html
@@ -341,6 +341,6 @@
       <input id="input" />
       <button type="button">submit</button>
     </form>
-    <script src="./main.ts" type="module"></script>
+    <script src="main.ts" type="module"></script>
   </body>
 </html>
