answer with submit button

--- a/src/index.html
+++ b/src/index.html
@@ -339,7 +339,7 @@
     </div>
     <form name="main" id="form">
       <input id="input" />
-      <button type="button">submit</button>
+      <button type="submit">submit</button>
     </form>
     <script src="main.ts" type="module"></script>
   </body>
