--- a/src/index.html
+++ b/src/index.html
@@ -341,6 +341,7 @@
       <input id="input" />
       <button type="submit">submit</button>
     </form>
+    <span id="timer-display"></span>
     <script src="main.ts" type="module"></script>
   </body>
 </html>
