--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
+    <div style="display: flex; justify-content: center; text-align: center;">
       <xml version="1.0" encoding="UTF-8" standalone="no">
       <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
@@ -336,12 +336,12 @@
           <g transform="translate(35.391541,28.212402)" id="g3232"></g>
         </g>
       </svg>
+      <form style="display: flex; justify-content: center;" name="main" id="form">
+        <input id="input" />
+        <button type="submit">submit</button>
+      </form>
+      <span id="timer-display"></span>
     </div>
-    <form name="main" id="form">
-      <input id="input" />
-      <button type="submit">submit</button>
-    </form>
-    <span id="timer-display"></span>
     <script src="main.ts" type="module"></script>
   </body>
 </html>
