--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div style="display: flex; justify-content: center; text-align: center;">
+      <div>
       <xml version="1.0" encoding="UTF-8" standalone="no">
       <!-- Created with Inkscape (http://www.inkscape.org/) -->
 
@@ -342,6 +343,10 @@
       </form>
       <span id="timer-display"></span>
     </div>
+    <div id='info' style="position: absolute; background-color: grey; width: 100%; height: 100px; opacity: 0.7; top: 200px; z-index: 1; align-items: center; justify-content: center; display: flex; color: white">
+      <span id="infoText">入力欄にフォーカスしてスタート！</span>
+    </div>
+  </div>
     <script src="main.ts" type="module"></script>
   </body>
 </html>
