--- a/src/index.html
+++ b/src/index.html
@@ -342,6 +342,8 @@
         <button type="submit">submit</button>
       </form>
       <span id="timer-display"></span>
+      <br/>
+      <button id="twitter-share-button">share on twitter</button>
     </div>
     <div id='info' style="position: absolute; background-color: grey; width: 100%; height: 100px; opacity: 0.7; top: 200px; z-index: 1; align-items: center; justify-content: center; display: flex; color: white">
       <span id="infoText">入力欄にフォーカスしてスタート！</span>
